# houjing

./: .gitignore  Cargo.toml  README.md  design.md
crates/experiments/fitting-plot/: Cargo.toml
crates/experiments/fitting-plot/src/: main.rs
crates/houjing-bezier/: Cargo.toml  README.md
crates/houjing-bezier/src/: constants.rs  error.rs  lib.rs  merge.rs  split.rs  utils.rs
crates/houjing-bezier/src/data/: curve.rs  format.rs  macros.rs  mod.rs  point.rs  segment.rs
crates/houjing-bezier/src/modules/: mod.rs
crates/houjing-bezier/src/modules/export/: json.rs  mod.rs  svg_path.rs
crates/houjing-bezier/src/modules/fit/: alternating_least_square_fit.rs  least_square_fit.rs  least_square_fit_common.rs  (+3 more)
crates/houjing-main/: Cargo.toml
crates/houjing-main/src/: compat.rs  components.rs  input.rs  lib.rs  main.rs  params.rs  selection.rs  systems.rs
crates/houjing-main/src/component/: curve.rs  mod.rs  window.rs
crates/houjing-main/src/input/: keyboard.rs  mod.rs  mouse.rs
crates/houjing-main/src/rendering/: mod.rs  primitive.rs
crates/houjing-main/src/startup/: mod.rs
crates/houjing-main/src/systems/: mod.rs
crates/houjing-main/src/systems/startup/: log.rs  mod.rs  window.rs
crates/houjing-main/src/systems/tools/: cursor.rs  curve_create.rs  delete.rs  drag.rs  hand.rs  merge.rs  mod.rs  nudge.rs  select.rs  split.rs  tool.rs  zoom.rs
crates/houjing-main/src/systems/tools/common/: mod.rs  point_finding.rs  selected.rs
crates/houjing-main/src/systems/ui/: mod.rs
crates/houjing-main/src/tools/: create.rs  curve_create.rs  mod.rs  select.rs
(+8 files in other folders)
