[package]
name = "houjing-main"
version = "0.0.1"
edition = "2024"

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
houjing-bezier = { path = "../houjing-bezier" }

[dev-dependencies]
bevy = { version = "0.13", features = ["dynamic_linking", "file_watcher"] }

[features]
dev = [
    "bevy/dynamic_linking",
    "bevy/file_watcher"
]
